<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LitHe Tyst</string>
    
    <!-- colors -->
    <color name="settings_title_color">#FF99CC</color>
    <color name="background_color_kool">#000000</color>
    <color name="text_color">#00E6E6</color>
    <color name="white">#FFFFFF</color>
    <color name="orange">#FF9933</color>
    <color name="redorange">#993300</color>
    <color name="darkred">#800000</color>

    <!-- Menyval -->
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Inställningar (A)</string>
    <string name="action_settings_b">Inställningar (B)</string>
    <string name="action_search">Search</string>
    <string name="action_daylayout">Daglayout</string>
    <string name="action_calendar">Kalender</string>

    <string-array name="views_array">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
    </string-array>
    
    <string name="language">Språk</string>

    <string-array name="language_array">
        <item>Svenska</item>
        <item>Engelska</item>
    </string-array>

    <string name="edit">Lägg till/ändra schema</string>
    <string name="submit">Utför</string>
    <string name="eight">08.00</string>
    <string name="nine">09.00</string>
    <string name="the_day">Dagen the day</string>
    <string name="ten">10.00</string>
    <string name="eleven">11.00</string>
    <string name="twelve">12.00</string>
    <string name="one_pm">13.00</string>
    <string name="two">14.00</string>
    <string name="three">15.00</string>
    <string name="four">16.00</string>
    <string name="five">17.00</string>
    <string name="sex">18.00</string>
    <string name="seven">19.00</string>
    <string name="eight_pm">20.00</string>
    <string name="nine_pm">21.00</string>
    <string name="title_activity_day">DayActivity</string>
    
    <string name="sync">Sync</string>
    <string name="next">Next</string>
    <string name="sync_hint">Studentgrupp ...</string>
    <string name="sync_text">Ange din studentgrupp och tryck på "sync"</string>
    
    
    <string name="view_options">View</string>
    <string name="vibration_options">Vibration</string>
    <string name="add_change_scedule">Lägg till/ändra schema</string>
    <string name="language_options">Språk</string>

    <string name="language_eng">eng</string>
    <string name="language_sve">sve</string>
    <string name="view_options_sve">Vy</string>
    <string name="views_prompt">Välj vy</string>

    <string name="edit_schedule">Lägg till/ändra schema</string>
    
    <!-- Sidotitlar -->
    <string name="title_activity_sync">LiTHe Tyst: SyncActivity</string>
    <string name="title">Inställningar</string>
    <string name="title_activity_settings_menu">LiTHe Tyst: Inställningar</string>
    <string name="title_activity_second_settings">LiTHe Tyst: Inställningar</string>
    <string name="title_activity_tab">LiTHe Tyst: Kalender</string>
    
    <string name="day">Dag</string>
    <string name="week">Vecka</string>
    <string name="month">Månad</string>

    <!-- Tabbar -->
    <string name="title_section1">Day</string>
    <string name="title_section2">Week</string>
    <string name="title_section3">Month</string>
    <string name="title_activity_calendar">Månadsvy</string>

</resources>
