<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Settings top, should appear as action button -->
    <item android:id="@+id/action_settings_top"
          android:icon="@drawable/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_about"
          android:icon="@drawable/action_about"
          android:title="@string/action_about"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
          android:icon="@drawable/action_help"
          android:title="@string/action_help"
          android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
