<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Menyval till mainActivitys actionbar -->
    <item android:id="@+id/action_settings_top"
          android:icon="@drawable/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_about"
          android:icon="@drawable/action_about"
          android:title="@string/action_about"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
          android:icon="@drawable/action_help"
          android:title="@string/action_help"
          android:showAsAction="ifRoom" />
        
    <!-- Settings, syns inte i actionbar -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" /> 
</menu>
