<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scroll_view">

<TableLayout 
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color_kool"

    android:orientation="horizontal" >

	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	    <Button
	        android:id="@+id/date_picker_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/open_date_picker"
	        android:textSize="@dimen/text_size" />
	</LinearLayout>
	    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/the_day"
        android:textColor="@color/darkred"
        android:textSize="30sp" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="40dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/eight"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
      
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/nine"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp"  >
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/ten"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
        
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp"  >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/eleven"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp"  >
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/twelve"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp"  >
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/one_pm"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:minHeight="40dp"  >
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/two"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:minHeight="40dp"  >
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/three"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />
    

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"   >
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/four"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/five"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/sex"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/seven"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/eight_pm"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />

    <TableRow
        android:id="@+id/tableRow14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp" >
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/nine_pm"
            android:textColor="@color/orange"
            android:textSize="20sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/redorange" />
    </TableRow>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/redorange" />
    

</TableLayout>
</ScrollView>
