<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color_kool"
    android:columnCount="9"
    android:rowCount="22"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsMenuActivity" >

    <Space android:layout_gravity="fill_vertical" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="284dp"
        android:layout_height="66dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/darkred"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/ImageView1"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_marginRight="30dp"
        android:layout_row="2"
        android:contentDescription="TODO"
        android:src="@drawable/view_orange" />

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="13" />

    <!-- 
    <Button
        android:id="@+id/btnSubmit"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="21"
        android:text="@string/submit"
        android:textColorHint="@color/redorange" />
         -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_row="7"
        android:src="@drawable/vibration_orange" />
   <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_marginLeft="60dp"
        android:layout_row="2"
        android:text="@string/view_options_sve"
        android:textColor="@color/redorange"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"    
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_row="7"
        android:text="@string/vibration_options"
        android:textColor="@color/redorange"
        android:textSize="25sp" />

 
    <ImageView
        android:id="@+id/imageView3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_row="10"
        android:src="@drawable/language_orange" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_marginLeft="60dp"
        android:layout_row="10"
        android:text="@string/language"
        android:textColor="@color/redorange"
        android:textSize="25sp" />
    
      <Spinner
          android:id="@+id/spinner2"
          android:layout_width="100dp"
          android:layout_height="44dp"
          android:layout_column="0"
          android:layout_gravity="right"
          android:layout_row="2"
          android:background="@color/orange"
          android:entries="@array/views_array"
          android:prompt="@string/views_prompt" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="10"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:entries="@array/language_array" 
        android:prompt="@string/views_prompt"/>
    
    <ToggleButton
        android:id="@+id/togglebutton"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_row="7"
        android:background="@color/orange"
        android:onClick="onToggleClicked"
        android:textOff="Av"
        android:textOn="På" />

    <ImageButton
        android:id="@+id/ImageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_row="12"
        android:src="@drawable/edit_orange_" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="0"
		android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_row="12"
        android:text="@string/edit"
        android:textColor="@color/redorange"
        android:textSize="20sp" />

</GridLayout>