<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color_kool"
    android:columnCount="9"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="13"
    tools:context=".SecondSettingsActivity" >

    <!-- ?xml version="1.0" encoding="utf-8"? -->

    <TextView
        android:id="@+id/textView1"
        android:layout_columnSpan="9"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_rowSpan="2"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkred"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:text="@string/view_options_sve"
        android:textColor="@color/darkred"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/view_text"
      
        android:layout_columnSpan="2"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:clickable="true"
        android:contentDescription="@string/settings_title"
        android:src="@drawable/view_text_orange" />
    
    <ImageButton
        android:id="@+id/view_visual"
      
        android:layout_columnSpan="2"
        android:layout_marginLeft="20dp"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:clickable="true"
        android:src="@drawable/view_vis_orange" />

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="5" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:text="@string/vibration_options"
        android:textColor="@color/darkred"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/sound_on"
      
        android:layout_columnSpan="2"
        android:layout_marginLeft="10dp"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:clickable="true"
        android:src="@drawable/sound_on_orange" />

    <ImageButton
        android:id="@+id/vibration_on"
        android:layout_column="7"
        android:layout_columnSpan="2"
        android:layout_marginLeft="20dp"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:clickable="true"
        android:src="@drawable/sound_of_orange" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:text="@string/language_options"
        android:textColor="@color/darkred"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/imageButton1"
 
        android:layout_columnSpan="2"
        android:layout_marginLeft="10dp"
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:clickable="true"
        android:src="@drawable/sve_orange" />

    <ImageButton
        android:id="@+id/imageButton2"

        android:layout_columnSpan="2"
        android:layout_marginLeft="20dp"
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:src="@drawable/eng_orange" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_column="8"
        android:layout_row="8"
      
        android:clickable="true"
        android:src="@drawable/edit_orange_" />
  <!-- android:onClick="startSyncActivity" -->
</GridLayout>